ecmascript/parser/tests/test262-error-references/fail/2d46c7c14cfb0330.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/2d46c7c14cfb0330.js:1:35
  |
1 | function hello() { 'use strict'; "\1"; }
  |                                   ^^

